Link to event pages

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -20,7 +20,7 @@
       href="https://unpkg.com/luminous-lightbox@2.3.2/dist/luminous-basic.min.css"
     />
     <link rel="stylesheet" type="text/css" href="/css/main.css" />
-    <script src="./src/index.js"></script>
+    <script src="/src/index.js"></script>
     <script
       async
       src="https://platform.twitter.com/widgets.js"
