Add in legacy data

--- a/_includes/macros.njk
+++ b/_includes/macros.njk
@@ -12,12 +12,15 @@
             data-full-img="{{project.images.main}}"
         >
             <img
-            alt="{{project.name}} by {{project.author}}"
+            alt="{{project.name}}{% if project.author %} by {{project.author}}{% endif %}"
             src="{{project.images.thumbnail}}"
             />
         </a>
         <p>
-            <strong>{{project.name}}</strong> by {{project.author}}
+            <strong>{{project.name}}</strong>
+            {% if project.author %}
+            by {{project.author}}
+            {% endif %}
         </p>
     </li>
 {% endmacro %}
@@ -30,7 +33,7 @@
             <h3>{{ event.name }}, {{ event.date | formatTitleDate }}</h3>
         {% endif %}
         <div class="event-information">
-            <p> <strong>Where:</strong> {{ event.location }} </p>
+            <p> <strong>Where:</strong> <a href="{{event.location.link}}">{{ event.location.name }}</a> </p>
             <p>
                 <strong>When: </strong> {{- event.date | formatBodyDate -}}, {{ event.times.start }} - {{ event.times.end -}}
             </p>
@@ -40,26 +43,28 @@
         </p>
 
 
-        {% IfFutureDate event.date %}
-            <p>
-                If you are showing a project, please fill out this form so we can find
-                you and your project after the event!
-            </p>
+        {% if event.projects.length > 0 %}
+            {% IfFutureDate event.date %}
+                <p>
+                    If you are showing a project, please fill out this form so we can find
+                    you and your project after the event!
+                </p>
 
-            <p class="center">
-                <a class="button" href="https://forms.gle/WFU5NE8vn5JP7MVY9">
-                    Register your project!
-                </a>
-            </p>
-        {% endIfFutureDate %}
-        <h4>Projects</h4>
-        <ul class="card-container">
-            {%- for project in event.projects -%}
-                {{ projectCard(project) }}
-            {%- endfor -%}
-        </ul>
-        <script>
-            registerLightBox('#{{ event.name | slug }}-{{ event.date }}');
-        </script>
+                <p class="center">
+                    <a class="button" href="https://forms.gle/WFU5NE8vn5JP7MVY9">
+                        Register your project!
+                    </a>
+                </p>
+            {% endIfFutureDate %}
+            <h4>Projects</h4>
+            <ul class="card-container">
+                {%- for project in event.projects -%}
+                    {{ projectCard(project) }}
+                {%- endfor -%}
+            </ul>
+            <script>
+                registerLightBox('#{{ event.name | slug }}-{{ event.date }}');
+            </script>
+        {% endif %}
     </section>
 {% endmacro %}
