Use url filter for internal links

--- a/_includes/layout.njk
+++ b/_includes/layout.njk
@@ -13,14 +13,14 @@
       name="og:image"
       content="https://r-k.io/assets/images/feedback-night/feedback.jpeg"
     />
-    <link rel="stylesheet" type="text/css" href="/css/sutro-theme.css" />
+    <link rel="stylesheet" type="text/css" href="{{ "/css/sutro-theme.css" | url}}" />
     <link
       rel="stylesheet"
       type="text/css"
       href="https://unpkg.com/luminous-lightbox@2.3.2/dist/luminous-basic.min.css"
     />
-    <link rel="stylesheet" type="text/css" href="/css/main.css" />
-    <script src="/src/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="{{ "/css/main.css" | url }}" />
+    <script src="{{ "/src/index.js" | url }}"></script>
     <script
       async
       src="https://platform.twitter.com/widgets.js"
